# Coretx

./: LICENSE  README.MD  README.md  README_COMPLETE.md  TESTING_SUMMARY.md  demo.py  demo_basic.py  demo_complete.py  pyproject.toml  requirements.txt  simple_test.py  test_snake_analysis.py  verify_implementation.py
corectx/: __init__.py  cli.py
corectx/core/retrieval/: bm25_retriever.py
corectx/utils/: __init__.py  config_utils.py  logging_utils.py
coretx/: __init__.py  analyzer.py  cli.py  core.py  graph.py  models.py
coretx/config/: __init__.py
coretx/core/: __init__.py
coretx/core/agent/: __init__.py  base_agent.py  enhanced_tools.py  tools.py
coretx/core/display/: __init__.py  console.py  formatters.py
coretx/core/extensions/: __init__.py  base.py  connectors.py  registry.py
coretx/core/extensions/languages/: __init__.py  css.py  html.py  javascript.py  markdown.py  python.py
coretx/core/graph/: __init__.py  builder.py  searcher.py  types.py
coretx/core/locator/: __init__.py  locator.py  tools.py
coretx/core/retrieval/: __init__.py
coretx/llm/: __init__.py  client.py  embeddings.py  query_processor.py  semantic_analyzer.py
coretx/parsers/: __init__.py  base.py  javascript_parser.py  python_parser.py  registry.py  typescript_parser.py
coretx/utils/: __init__.py  file_utils.py  progress.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  FEATURE_SUMMARY.md  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  OPENAI_CONFIG.md  README.md  index.html
examples/: README.md  basic_usage.py  config_example.yaml
examples/sample_project/: main.py
examples/sample_project/auth/: manager.py
examples/sample_project/models/: user.py
examples/sample_project/utils/: logger.py
examples/snake_game/: README.md  ai_player.py  game.py  main.py  utils.py
examples/snake_game/.coretx/: graph.json
locagent_kernel/: PROJECT_SUMMARY.md  README.md  __init__.py  cli.py  requirements.txt  setup.py
locagent_kernel/config/: settings.py
locagent_kernel/core/agent/: localization_agent.py
locagent_kernel/core/retrieval/: hybrid_retriever.py
locagent_kernel/docs/: generate_docs.py  index.html
locagent_kernel/examples/: basic_usage.py  config_example.yaml
locagent_kernel/tests/: __init__.py
locagent_kernel/utils/: config_utils.py
tests/: README.md  __init__.py  test_config.py  test_core.py  test_coretx.py  test_custom_api.py  test_graph.py  test_parsers.py  test_query_capabilities.py  test_quick_api.py  test_setup.py  test_snake_example.py
tests/integration/: __init__.py  test_comprehensive.py  test_nlp_queries.py  test_openai_integration.py
tests/sample_projects/: README.md  SUMMARY.md  config.py  coretx_test_results.json  demo.py  nlp_test.py  sample_app.py  simple_coretx_results.json  simple_test.py  utils.py  web_server.py
tests/test_plans/: COMPREHENSIVE_TEST_PLAN.md  TEST_EXECUTION_GUIDE.md
tests/test_reports/: __init__.py
