[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coretx"
version = "0.1.0"
description = "Intelligent code context engine for building comprehensive knowledge graphs"
readme = "README.MD"
license = {text = "MIT"}
authors = [
    {name = "Coretx Team", email = "team@coretx.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "tree-sitter-cpp>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "networkx>=3.0",
    "numpy>=1.21.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "pathspec>=0.11.0",
    "aiofiles>=23.0.0",
    "asyncio-throttle>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "graphviz>=0.20.0",
]

[project.scripts]
coretx = "coretx.cli:main"

[project.urls]
Homepage = "https://github.com/Whopus/Coretx"
Documentation = "https://coretx.readthedocs.io"
Repository = "https://github.com/Whopus/Coretx.git"
Issues = "https://github.com/Whopus/Coretx/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["coretx*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true